# rogue-scholar-api

./: .dockerignore  .env.default  .gitignore  Aptfile  Dockerfile  MIGRATION_PLAN.md  Procfile  README.md  app.py  config.py  default.html5  docker-compose.yml  fly.toml  hypercorn.toml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  style.css  utils.py
.github/workflows/: build.yml  publish.yml  release.yaml
api/: __init__.py  blogs.py  citations.py  db_client.py  db_client_simplified.py  pocketbase.py  posts.py  schema.py  ssh_tunnel.py  supabase.py  supabase_client.py  typesense.py  typesense_client.py  utils.py  works.py
pandoc/: awards.yaml  default.epub3  default.html5  epub.css  names.yaml  redirects.yaml  style.css
rogue_scholar/: __init__.py
rogue_scholar_api/: __init__.py  blogs.py  ghost.py  posts.py  schema.py  supabase.py  typesense.py  utils.py
scripts/: debug_lifespan.py
src/rogue_scholar_api/: __init__.py
templates/: hello.html
tests/: conftest.py  test-blogs.py  test-citations.py  test-posts.py  test-routes.py  test-ssh_tunnel.py  test-utils.py  test-works.py
tests/cassettes/test-blogs/: test_create_blog_community_already_exits.yaml  test_create_blog_community_metadatagamechangers.yaml  test_extract_all_blogs.yaml  test_extract_single_blog_atom_feed.yaml  test_extract_single_blog_json_feed.yaml  test_extract_single_blog_rss_feed.yaml  test_find_feed_blogger.yaml  test_find_feed_ghost.yaml  test_find_feed_hugo.yaml  test_find_feed_hypotheses.yaml  test_find_feed_jekyll.yaml  test_find_feed_quarto.yaml  test_find_feed_substack.yaml  test_find_feed_wordpress.yaml  test_find_feed_wordpress_subfolder.yaml  test_update_blog_community_metadatagamechangers.yaml  test_update_single_blog.yaml  test_upsert_single_blog.yaml
tests/cassettes/test-posts/: test_extract_all_posts_by_blog_blogger.yaml  test_extract_all_posts_by_blog_ghost.yaml  test_extract_all_posts_by_blog_ghost_updated.yaml  test_extract_all_posts_by_blog_rss.yaml  test_extract_all_posts_by_blog_substack.yaml  test_extract_all_posts_by_blog_wordpress.yaml  test_extract_all_posts_by_blog_wordpresscom.yaml  test_extract_all_posts_by_blog_wordpressorg.yaml  test_extract_posts_by_blog_blogger.yaml  test_extract_posts_by_blog_ghost.yaml  test_extract_posts_by_blog_ghost_updated.yaml  test_extract_posts_by_blog_organizational_author.yaml  test_extract_posts_by_blog_rss.yaml  test_extract_posts_by_blog_squarespace.yaml  test_extract_posts_by_blog_substack.yaml  test_extract_posts_by_blog_wordpresscom.yaml  test_extract_posts_by_blog_wordpressorg.yaml  test_upsert_single_post.yaml
tests/cassettes/test-routes/: test_blogs_post_route.yaml  test_blogs_route.yaml  test_blogs_sort_route.yaml  test_blogs_with_include_fields_route.yaml  test_blogs_with_query_and_pagination_route.yaml  test_post_as_bibtex.yaml  test_post_as_bibtex_no_doi.yaml  test_post_as_citation.yaml  test_post_as_citation_with_locale.yaml  test_post_as_citation_with_style.yaml  test_post_as_csl.yaml  test_post_as_epub.yaml  test_post_as_markdown.yaml  test_post_as_pdf.yaml  test_post_as_ris.yaml  test_post_as_xml.yaml  test_post_not_found.yaml  test_post_route.yaml  test_post_uuid_as_csl.yaml  test_posts_filter_by_language_route.yaml  test_posts_filter_by_published_since_route.yaml  test_posts_filter_by_tags_route.yaml  test_posts_not_indexed_route.yaml  test_posts_post_route.yaml  test_posts_unregistered_route.yaml  test_posts_updated_route.yaml  test_posts_with_blog_slug_route.yaml  test_posts_with_query_and_include_fields_route.yaml  test_posts_with_query_and_pagination_route.yaml  test_posts_with_query_and_sort_route.yaml  test_posts_with_query_by_author_url.yaml  test_single_blog_post_route.yaml  test_single_blog_route.yaml  test_single_blog_with_posts_post_route.yaml  test_work_route.yaml  test_works_route.yaml
tests/cassettes/test-works/: test_fetch_single_work_blog_post.yaml  test_get_single_work_blog_post.yaml  test_update_single_work_blog_post.yaml
tests/fixtures/: commonmeta-no-doi.json  commonmeta.json  rogue-scholar.json
