[project]
name = "rogue-scholar-api"
version = "0.10.0"
repository = "https://github.com/front-matter/rogue-scholar-api"
homepage = "https://rogue-scholar.org"
documentation = "https://docs.rogue-scholar.org"
description = "API for the Rogue Scholar science blogging platform."
keywords = ["science", "blogging", "quart", "api", "supabase", "typesense"]
authors = [
    { name = "Martin Fenner", email = "martin@front-matter.io" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "Quart >=0.19.6",
    "tox >=4.11.3",
    "hypercorn >=0.17.3",
    "supabase >=2.7",
    "python-dotenv >=1.0.0",
    "quart-schema >=0.17.1",
    "typesense >=0.21.0",
    "pydash >=7.0",
    "quart-rate-limiter >=0.10.0",
    "feedparser >=6.0.10",
    "furl >=2.1.3",
    "beautifulsoup4 >=4.12.2",
    "xmltodict >=0.12.0",
    "sentry-sdk >=2.14.0",
    "nh3 >=0.2.18",
    "langdetect >=1.0.9",
    "dateutils >=0.6.12",
    "lxml >=5.1.0",
    "pandoc >=2.4b0",
    "commonmeta-py >=0.18",
    "python-frontmatter >=1.1",
    "babel >=2.14.0",
    "iso8601 >=2.1.0",
    "levenshtein >=0.24.0",
    "quart-cors >=0.7.0",
    "httpx >=0.24",
    "orjson >=3.10.7",
    "weasyprint >=62.3",
    "pocketbase >=0.12.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "coverage",
    "pytest >= 7.2",
    "pytest-cov >= 5.0",
    "pytest-asyncio >= 0.24",
    "pytest-recording >= 0.13",
    "ruff >= 0.6.7"
]

[tool.ruff]
line-length = 88
select = [
    "F401",
    "F403",
]
include = ["pyproject.toml", "api/**/*.py"]


[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py312

    [testenv]
    passenv = *
    deps = 
        pytest
        pytest-cov
    commands = pytest --cov=rogue_scholar_api --cov-report=xml

    [coverage:run]
    relative_files = True
    branch = True
"""

